# ocx-extension-rudder

./: .gitignore  .xsdata.xml  CHANGELOG.md  Makefile  OCX_ext_rudder.xsd  README.md  _config.yml  environment.yml  insert_version.py  main.py  pyproject.toml  xsdata_package.py
docs/: README.md  index.html
ocx_extension_rudder/: __init__.py  ocx_ext_rudder.py
ocx_extension_rudder/unitsml/: __init__.py  unitsml_schema_lite_0_9_18.py
ocx_extension_rudder/v286_fix/: __init__.py  ocx_schema.py
ocx_rudder/: .xsdata.xml  __init__.py
ocx_rudder/ocx_rudder_120a0/: __init__.py  ocx_ext_rudder.py
ocx_rudder/ocx_rudder_120a0/unitsml/: __init__.py  unitsml_schema_lite_0_9_18.py
ocx_rudder/ocx_rudder_120a0/v286_fix/: __init__.py  ocx_schema.py
